...
import org.jetbrains.compose.ui.tooling.preview.PreviewParameterProvider

@VisibleForTesting
object TaskEditorBottomSheetTestTag {
    const val BOTTOM_SHEET = "TASK_EDITOR_BOTTOM_SHEET"
    const val SHEET_TITLE = "TASK_EDITOR_BOTTOM_SHEET_TITLE"
    const val TITLE_FIELD = "TASK_EDITOR_TITLE_FIELD"
    const val TITLE_FIELD_ERROR_MESSAGE = "TASK_EDITOR_TITLE_FIELD_ERROR_MESSAGE"
    const val NOTES_FIELD = "TASK_EDITOR_NOTES_FIELD"
    const val DUE_DATE_CHIP = "TASK_EDITOR_DUE_DATE_CHIP"
    const val CANCEL_BUTTON = "TASK_EDITOR_CANCEL_BUTTON"
    const val VALIDATE_BUTTON = "TASK_EDITOR_VALIDATE_BUTTON"
}

enum class TaskEditMode {
...
