...

@VisibleForTesting
object TasksColumnTestTag {
    const val ALL_TASKS_COMPLETED_EMPTY_STATE = "ALL_TASKS_COMPLETED_EMPTY_STATE"
    const val TASKS_COLUMN = "TASKS_COLUMN"
    const val DATE_RANGE_STICKY_HEADER = "DATE_RANGE_STICKY_HEADER_"
    const val COMPLETED_TASKS_TOGGLE = "COMPLETED_TASKS_TOGGLE"
    const val COMPLETED_TASKS_TOGGLE_LABEL = "COMPLETED_TASKS_TOGGLE_LABEL"
}

@Composable
fun TasksColumn(
    taskLists: List<TaskListUIModel>,
...
